tests/inputs/invalid/types/bad_records/bad_access.crbc
routine main () : integer is 
    var x : record 
        var a : integer is 0;
        var b : integer is 1;
    end;

    var y : boolean is x.a;

    return 0;
end